✅ Completed Tasks
  1. Fixed Network Connectivity - Discovered and fixed the critical issue where test containers couldn't communicate because TestContainers.network() creates different network instances across JVMs. Implemented dynamic network discovery to join the actual test resources network.
  2. Fixed ProcessingBufferTest - Changed from jimfs to @TempDir and fixed filename format to include dash separator.
  3. Fixed PipelineDataGenerator Test - Updated to create 3 unique embedding configurations as expected.
  4. Created Integration Test Module - Set up engine-integration-test as a submodule under yappy-orchestrator.
  5. Fixed Compile Errors - Resolved all compilation issues in the integration test module.
  6. Test Health Assessment - Analyzed project test health:
    - 18 modules have tests
    - 12 modules (67%) have all tests passing ✅
    - 6 modules (33%) have failing tests ❌
    - Main issues: port binding conflicts and missing configuration properties

  📊 Current Project Status

  Passing Modules: All model modules, module registration, echo, embedder, opensearch-sink, and others are working well.

  Failing Categories:
  1. Port 8080 conflicts in chunker and tika-parser tests
  2. Missing test resource properties for gRPC hosts
  3. Missing Consul configuration in orchestrator

  🎯 Next Steps

  The remaining tasks are:
  1. Run end-to-end integration test with engine in container
  2. Fix port binding conflicts in chunker/tika tests
  3. Enable and fix remaining disabled tests

  The test resources framework is now properly set up with network connectivity working, which was the major blocker. The project is in much better shape for integration testing!